<resources>
    <string name="app_name">FirstActivity</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="btn">OK</string>
    <string name="sum">Sum</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="BtnMul">x</string>
    <string name="BtnPlus">+</string>
    <string name="BtnDiv">/</string>
</resources>